041920241327-added link to the repo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <h1>Welcome to <em>NeJo OS</em></h1>
   <p>A minimal, blazing-fast Linux OS built for developers and pentesters.</p>
   <p>Available in openbox, kde and hyprland</p>
-  <p><a href="https://github.com/JoeSaf/your-os-repo" target="_blank">View on GitHub</a></p>
+  <p><a href="https://github.com/JoeSaf/oswebsite" target="_blank">View on GitHub</a></p>
   <img class="screenshot" src="grub.png" alt="Screenshot of your OS" />
   <img class="screenshot" src="home.png" alt="Screenshot of your OS" />
   <img class="screenshot" src="instal.png" alt="Screenshot of your OS" />
