042120250751-updates to the site

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
       font-family: sans-serif;
       text-align: center;
       background-color: #111;
-      color: #eee;
+      color: #b38383;
       padding: 2rem;
     }
     h1 {
       font-size: 3rem;
       margin-bottom: 1rem;
+      color: #00bfff;
     }
     a {
       color: #00bfff;
@@ -27,18 +28,39 @@
       margin-top: 2rem;
       border-radius: 10px;
     }
+    .footer
+    .text{
+      color: #2911c2
+    }
   </style>
 </head>
 <body>
   <h1>Welcome to <em>NeJo OS</em></h1>
   <p>A minimal, blazing-fast Linux OS built for developers and pentesters.</p>
+  <p>Considering the rapid growth in Tanzania's technology, we thought it'd be better to have<br>
+  a distribution catered to meet our needs.<br></p>
+  <em>Why an Arch based distro?</em>
+  <p>I think we can all come to a certain level of agreement that having control over our systems without betraying<br>
+  performance has been and is always our goal. Our comfortability with the archiso allows us to build <em>you</em> a distro<br>
+  that is unbloated and only comes with necessary items to get your system up and running.
+  <br>
+  We have included a post installation script that will allow you to pick between two careers, <br><em>1. Developer</em>
+  <br><em>2. Security</em>
+  </p>
   <p>Available in openbox, kde and hyprland</p>
-  <p><a href="https://github.com/JoeSaf/oswebsite" target="_blank">View on GitHub</a></p>
+  <p><a href="https://github.com/JoeSaf/oswebsite" target="_blank">Wanna join and become a contributor? Click here!</a></p><!--add a countirbutors READMe and the update the link-->
+  <p><a href="https://github.com/JoeSaf/oswebsite" target="_blank">Download <em>NeJo os</em></a></p><!--well remember to replace this with the source forge link after everything is done-->
   <img class="screenshot" src="grub.png" alt="Screenshot of your OS" />
   <img class="screenshot" src="home.png" alt="Screenshot of your OS" />
   <img class="screenshot" src="instal.png" alt="Screenshot of your OS" />
   <img class="screenshot" src="install1.png" alt="Screenshot of your OS" />
   <img class="screenshot" src="view1.png" alt="Screenshot of your OS" />
-  <img class="screenshot" src="home2.png" alt="Screenshot of your OS" />
+  <img class="screenshot" src="home2.png" alt="Screenshot of your OS" /><br>
+  <img class="screenshot" src="" alt="Hyprland Coming soon" />
 </body>
+<footer>
+  <br>
+  Copyright... well it's opensource but NeJo made it first.<br>
+  Made in <text>Tanzania</text>.
+</footer>
 </html>
